# whitenoise

./: .gitignore  ChangeLog  Makefile.in  README  audio.c  audio.h  config.h.in  configure  configure.ac  filter.c  filter.h  plot.c  plot.h  prep-release.sh  whitenoise.c
doc/: Makefile  manual.html  manual.tex
